--- a/django-app/requirements.txt
+++ b/django-app/requirements.txt
@@ -1,8 +1,10 @@
 django
 gunicorn
 requests
-django-dotenv
+python-dotenv>=1.1.0
 psycopg2-binary
 django-storages
 boto3
 python-dotenv
+
+whitenoise>=6.0
